# mit_operation_system_engineering_6_828

./: .gdbinit  .gitignore  STUDY_NOTES.md  code_reading.txt
docs/: COMMANDS.md  STUDY_NOTES.md  STUDY_NOTE_BOOT_LOADER.md  STUDY_NOTE_KERNEL.md  STUDY_NOTE_TRAPS_N_INTERRUPTS.md  STUDY_NOTE_xv6.md
hw_01/: sh.c  x.txt
practice/page_11/: CMakeLists.txt  buf_throught.cc
practice/page_12/: cat.cc  input.txt
practice/page_13/: build_and_run.sh  pipe.cc
shell/: CMakeLists.txt  build_and_run.sh  sh.c  sh_lib.c  sh_lib.h  util.c  util.h
